@@ -51,7 +51,7 @@ sub init_taxes {
     }
     my $query = qq|
 		SELECT t.taxnumber, c.description,
-			t.rate, t.chart_id, t.pass, m.taxmodulename
+			t.rate, t.chart_id, t.pass, m.taxmodulename, t.minvalue
 			FROM tax t INNER JOIN chart c ON (t.chart_id = c.id)
 			INNER JOIN taxmodule m 
 				ON (t.taxmodule_id = m.taxmodule_id)
@@ -82,6 +82,7 @@ sub init_taxes {
         $tax->chart( $ref->{'chart'} );
         $tax->description( $ref->{'description'} );
         $tax->value( Math::BigFloat->bzero() );
+        $tax->minvalue($ref->{'minvalue'});
 
         push @taxes, $tax;
         $sth->finish;#should this not be out of foreach loop?, to examine
